feat custom assimp import

--- a/MiniEngine/TestProject/TestProject.vcxproj.filters
+++ b/MiniEngine/TestProject/TestProject.vcxproj.filters
@@ -18,9 +18,13 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp" />
+    <ClCompile Include="MyModel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
+    <ClInclude Include="MyModel.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Logo.png">
